@@ -1,16 +1,44 @@
 // $Id$
 
 #include "CPURegsViewer.h"
+#include "CommClient.h"
+#include "OpenMSXConnection.h"
 #include <QPainter>
 #include <QPaintEvent>
+#include <QMessageBox>
+#include <QToolTip>
 
+const int REG_AF  = 0;
+const int REG_AF2 = 1;
+const int REG_BC  = 2;
+const int REG_BC2 = 3;
+const int REG_DE  = 4;
+const int REG_DE2 = 5;
+const int REG_HL  = 6;
+const int REG_HL2 = 7;
+const int REG_IX  = 8;
+const int REG_IY  = 9;
+const int REG_PC  = 10;
+const int REG_SP  = 11;
+const int REG_I   = 12;
+const int REG_R   = 13;
+const int REG_IM  = 14;
+const int REG_IFF = 15;
+
+const char* regNames[14] = {
+	"AF", "AF'", "BC", "BC'",
+	"DE", "DE'", "HL", "HL'",
+	"IX", "IY", "PC", "SP",
+	"I", "R"
+};
 
 CPURegsViewer::CPURegsViewer(QWidget* parent)
 	: QFrame(parent)
 {
 	// avoid UMR
-	memset(&regs,        0, sizeof(regs));
-	memset(&regsChanged, 0, sizeof(regsChanged));
+	memset(&regs,         0, sizeof(regs));
+	memset(&regsChanged,  0, sizeof(regsChanged));
+	memset(&regsModified, 0, sizeof(regsModified));
 	
 	setFrameStyle(WinPanel | Sunken);
 	setFocusPolicy(Qt::StrongFocus);
@@ -19,6 +47,8 @@ CPURegsViewer::CPURegsViewer(QWidget* parent)
 
 	frameL = frameT = frameB = frameWidth();
 	frameR = frameL;
+	
+	cursorLoc = -1;
 }
 
 void CPURegsViewer::resizeEvent(QResizeEvent* e)
@@ -34,10 +64,15 @@ void CPURegsViewer::paintEvent(QPaintEvent* e)
 	QPainter p(this);
 	p.setPen(palette().color(QPalette::Text));
 	
-	int h = fontMetrics().height();
+	rowHeight = fontMetrics().height();
 	int regWidth = fontMetrics().width("HLW");
 	int valWidth = fontMetrics().width("FFFFWW");
 	int d = fontMetrics().descent();
+
+	leftRegPos = frameL + 4; 
+	leftValuePos = leftRegPos + regWidth;
+	rightRegPos = leftValuePos + valWidth;
+	rightValuePos = rightRegPos + regWidth;
 	
 	// calc and set drawing bounds
 	QRect r(e->rect());
@@ -50,119 +85,28 @@ void CPURegsViewer::paintEvent(QPaintEvent* e)
 	// redraw background
 	p.fillRect( r, palette().color(QPalette::Base) );
 
-	int x = frameL + 4;
-	int y = frameT + h - 1 - d;
+	int y = frameT + rowHeight - 1 - d;
 
-	QString hexStr;
+	for( int r = 0; r < 14; r+=2 ) {
+		p.drawText( leftRegPos , y, regNames[r] ); 
+		drawValue( p, r, leftValuePos, y );
+		p.drawText( rightRegPos, y, regNames[r+1] ); 
+		drawValue( p, r+1, rightValuePos, y );
+		y += rowHeight;
+	}
 
-	p.drawText(x, y, "AF");
-	x += regWidth;
-	hexStr.sprintf("%04X", regs.AF);
-	drawValue(p, x, y, hexStr, regsChanged.AF);
-	x += valWidth;
-
-	p.drawText(x, y, "AF'");
-	x += regWidth;
-	hexStr.sprintf("%04X", regs.AF2);
-	drawValue(p, x, y, hexStr, regsChanged.AF2);
-
-	x = frameL+4;
-	y += h;
+	// draw interrupt mode
+	p.drawText( leftRegPos, y, "IM" );
+	drawValue( p, 14, leftValuePos, y );
 	
-	p.drawText(x, y, "BC");
-	x += regWidth;
-	hexStr.sprintf("%04X", regs.BC);
-	drawValue(p, x, y, hexStr, regsChanged.BC);
-	x += valWidth;
-
-	p.drawText(x, y, "BC'");
-	x += regWidth;
-	hexStr.sprintf("%04X", regs.BC2);
-	drawValue(p, x, y, hexStr, regsChanged.BC2);
-
-	x = frameL+4;
-	y += h;
-
-	p.drawText(x, y, "DE");
-	x += regWidth;
-	hexStr.sprintf("%04X", regs.DE);
-	drawValue(p, x, y, hexStr, regsChanged.DE);
-	x += valWidth;
-
-	p.drawText(x, y, "DE'");
-	x += regWidth;
-	hexStr.sprintf("%04X", regs.DE2);
-	drawValue(p, x, y, hexStr, regsChanged.DE2);
-
-	x = frameL+4;
-	y += h;
-	
-	p.drawText(x, y, "HL");
-	x += regWidth;
-	hexStr.sprintf("%04X", regs.HL);
-	drawValue(p, x, y, hexStr, regsChanged.HL);
-	x += valWidth;
-
-	p.drawText(x, y, "HL'");
-	x += regWidth;
-	hexStr.sprintf("%04X", regs.HL2);
-	drawValue(p, x, y, hexStr, regsChanged.HL2);
-
-	x = frameL+4;
-	y += h;
-
-	p.drawText(x, y, "IX");
-	x += regWidth;
-	hexStr.sprintf("%04X", regs.IX);
-	drawValue(p, x, y, hexStr, regsChanged.IX);
-	x += valWidth;
-
-	p.drawText(x, y, "IY");
-	x += regWidth;
-	hexStr.sprintf("%04X", regs.IY);
-	drawValue(p, x, y, hexStr, regsChanged.IY);
-
-	x = frameL+4;
-	y += h;
-
-	p.drawText(x, y, "PC");
-	x += regWidth;
-	hexStr.sprintf("%04X", regs.PC);
-	drawValue(p, x, y, hexStr, regsChanged.PC);
-	x += valWidth;
-
-	p.drawText(x, y, "SP");
-	x += regWidth;
-	hexStr.sprintf("%04X", regs.SP);
-	drawValue(p, x, y, hexStr, regsChanged.SP);
-
-	x = frameL+4;
-	y += h;
-
-	p.drawText(x, y, "I");
-	x += regWidth;
-	hexStr.sprintf("%02X", regs.I);
-	drawValue(p, x, y, hexStr, regsChanged.I);
-	x += valWidth;
-
-	p.drawText(x, y, "R");
-	x += regWidth;
-	hexStr.sprintf("%02X", regs.R);
-	drawValue(p, x, y, hexStr, regsChanged.R);
-
-	x = frameL+4;
-	y += h;
-
-	p.drawText(x, y, "IM");
-	x += regWidth;
-	hexStr.sprintf("%i", regs.IM);
-	drawValue(p, x, y, hexStr, regsChanged.IM);
-	x += valWidth;
-
-	if( regs.IFF & 1 )
-		drawValue(p, x, y, "EI", regsChanged.IFF);
+	// draw interrupt state
+	if( regsChanged[REG_IFF] & 1 )
+		p.setPen(Qt::red);
+	if( regs[REG_IFF] )
+		p.drawText( rightRegPos, y, "EI");
 	else
-		drawValue(p, x, y, "DI", regsChanged.IFF);
+		p.drawText( rightRegPos, y, "DI" );
+	
 }
 
 QSize CPURegsViewer::sizeHint() const
@@ -171,62 +115,317 @@ QSize CPURegsViewer::sizeHint() const
 	              frameT + 8 * fontMetrics().height() + frameB );
 }
 
-void CPURegsViewer::drawValue(QPainter& p, const int x, const int y,
-                              const QString& str, const bool changed)
+void CPURegsViewer::drawValue(QPainter& p, int id, int x, int y)
 {
-	if (changed) {
-		p.setPen(Qt::red);
+	// determine value colour
+	QColor penClr = palette().color(QPalette::Text);
+	if( regsModified[id] ) {
+		penClr = Qt::darkGreen;
+	} else if( regsChanged[id] ) {
+		penClr = Qt::red;
 	}
-	p.drawText(x, y, str);
-	if (changed) {
-		p.setPen(palette().color(QPalette::Text));
+	// print (edit) value
+	if( (cursorLoc>>2) == id ) {
+		// cursor is in this value, print separate digits
+		int digit = 3;
+		if( id < REG_I )
+			digit = 0;
+		else if( id < REG_IM )
+			digit = 2;
+		// write all digit
+		while( digit < 4 ) {
+			// create string with a single digit
+			QString digitTxt = QString("%1")
+			                   .arg( (regs[id] >> (4*(3-digit))) & 15, 0, 16 )
+			                   .toUpper();
+			// if digit has cursor, draw as cursor
+			if( (cursorLoc&3) == digit ) {
+				// draw curser background
+				QBrush b( palette().color(QPalette::Highlight) );
+				p.fillRect( x, frameT + (cursorLoc>>3)*rowHeight, 
+				            fontMetrics().width(digitTxt), rowHeight, b );
+				p.setPen( palette().color(QPalette::HighlightedText) );
+			} else {
+				p.setPen( penClr );
+			}
+			p.drawText( x, y, digitTxt );
+			x += fontMetrics().width(digitTxt);
+			digit++;
+		}
+	} else {
+		// regular value print
+		p.setPen( penClr );
+		// create string
+		QString str;
+		if( id < REG_I )
+			str.sprintf( "%04X", regs[id] );
+		else if( id < REG_IM )
+			str.sprintf( "%02X", regs[id] );
+		else
+			str.sprintf( "%01X", regs[id] );
+		// draw
+		p.drawText(x, y, str);
 	}
+	// reset pen
+	p.setPen(palette().color(QPalette::Text));
+}
+
+void CPURegsViewer::setRegister( int id, int value )
+{
+	regsChanged[id] = regs[id] != value;
+	regs[id] = value;
 }
 
 void CPURegsViewer::setData(unsigned char* datPtr)
 {
-	for (int i = 0; i < 24; i += 2) {
-		*((quint16*)(datPtr + i)) = datPtr[i + 0] * 256 + datPtr[i + 1];
-	}
-	Z80Registers* newRegs;
-	newRegs = (Z80Registers*)datPtr;
+	setRegister( REG_AF , datPtr[ 0] * 256 + datPtr[ 1] );
+	setRegister( REG_BC , datPtr[ 2] * 256 + datPtr[ 3] );
+	setRegister( REG_DE , datPtr[ 4] * 256 + datPtr[ 5] );
+	setRegister( REG_HL , datPtr[ 6] * 256 + datPtr[ 7] );
+	setRegister( REG_AF2, datPtr[ 8] * 256 + datPtr[ 9] );
+	setRegister( REG_BC2, datPtr[10] * 256 + datPtr[11] );
+	setRegister( REG_DE2, datPtr[12] * 256 + datPtr[13] );
+	setRegister( REG_HL2, datPtr[14] * 256 + datPtr[15] );
+	setRegister( REG_IX , datPtr[16] * 256 + datPtr[17] );
+	setRegister( REG_IY , datPtr[18] * 256 + datPtr[19] );
+	setRegister( REG_PC , datPtr[20] * 256 + datPtr[21] );
+	setRegister( REG_SP , datPtr[22] * 256 + datPtr[23] );
+	setRegister( REG_I  , datPtr[24] );
+	setRegister( REG_R  , datPtr[25] );
+	setRegister( REG_IM , datPtr[26] );
+	// IFF separately to only check bit 0 for change
+	regsChanged[REG_IFF] = (regs[REG_IFF] & 1) != (datPtr[27] & 1);
+	regs[REG_IFF] = datPtr[27];
 
-	regsChanged.AF = regs.AF != newRegs->AF;
-	regs.AF = newRegs->AF;
-	regsChanged.BC = regs.BC != newRegs->BC;
-	regs.BC = newRegs->BC;
-	regsChanged.DE = regs.DE != newRegs->DE;
-	regs.DE = newRegs->DE;
-	regsChanged.HL = regs.HL != newRegs->HL;
-	regs.HL = newRegs->HL;
-	regsChanged.AF2 = regs.AF2 != newRegs->AF2;
-	regs.AF2 = newRegs->AF2;
-	regsChanged.BC2 = regs.BC2 != newRegs->BC2;
-	regs.BC2 = newRegs->BC2;
-	regsChanged.DE2 = regs.DE2 != newRegs->DE2;
-	regs.DE2 = newRegs->DE2;
-	regsChanged.HL2 = regs.HL2 != newRegs->HL2;
-	regs.HL2 = newRegs->HL2;
-	regsChanged.IX = regs.IX != newRegs->IX;
-	regs.IX = newRegs->IX;
-	regsChanged.IY = regs.IY != newRegs->IY;
-	regs.IY = newRegs->IY;
-	regsChanged.PC = regs.PC != newRegs->PC;
-	regs.PC = newRegs->PC;
-	regsChanged.SP = regs.SP != newRegs->SP;
-	regs.SP = newRegs->SP;
-	regsChanged.I = regs.I != newRegs->I;
-	regs.I = newRegs->I;
-	regsChanged.R = regs.R != newRegs->R;
-	regs.R = newRegs->R;
-	regsChanged.IM = regs.IM != newRegs->IM;
-	regs.IM = newRegs->IM;
-	regsChanged.IFF = (regs.IFF & 1) != (newRegs->IFF & 1);
-	regs.IFF = newRegs->IFF;
-
+	// reset modifications
+	cursorLoc = -1;
+	memset(&regsModified, 0, sizeof(regsModified));
+	memcpy(&regsCopy, &regs, sizeof(regs));
+	
 	update();
 
-	emit pcChanged(regs.PC);
-	emit spChanged(regs.SP);
-	emit flagsChanged(newRegs->AF & 0xFF);
+	emit pcChanged(regs[REG_PC]);
+	emit spChanged(regs[REG_SP]);
+	emit flagsChanged(regs[REG_AF] & 0xFF);
+}
+
+void CPURegsViewer::focusOutEvent(QFocusEvent *e)
+{
+	if( e->lostFocus() ) {
+		cancelModifications();
+		cursorLoc = -1;
+		update();
+	}
+}
+
+void CPURegsViewer::mousePressEvent(QMouseEvent *e)
+{
+	if( e->button() == Qt::LeftButton ) {
+		int pos = -1;
+		if( e->x() >= leftValuePos && e->x() < rightRegPos )
+			pos = 0;
+		if( e->x() >= rightValuePos)
+			pos = 4;
+		
+		if( pos >= 0 && e->y() < frameT+7*rowHeight) {
+			int row = (e->y() - frameT)/rowHeight;
+			cursorLoc = pos + 8*row;
+			if( row == 6 ) cursorLoc += 2;
+		}
+		update();
+	}
+}
+
+void CPURegsViewer::keyPressEvent(QKeyEvent *e)
+{
+	// don't accept when not editting
+	if( cursorLoc < 0 ) {
+		QFrame::keyPressEvent(e);
+		return;
+	}
+
+	int move = e->key();
+	if( (e->key() >= Qt::Key_0 && e->key() <= Qt::Key_9) ||
+	           (e->key() >= Qt::Key_A && e->key() <= Qt::Key_F) ) {
+	   // calculate numercial value
+		int v = e->key() - Qt::Key_0;
+		if( v > 9 ) v -= Qt::Key_A-Qt::Key_0-10;
+		// modify value
+		int id = cursorLoc >> 2;
+		int digit = cursorLoc & 3;
+		regs[id] &= ~(0xF000 >> (4*digit));
+		regs[id] |= v << (12 - 4*digit);
+		regsModified[id] = true;
+		move = Qt::Key_Right;
+	}
+	
+	if( move == Qt::Key_Right ) {
+		cursorLoc++;
+		if( cursorLoc == 4*REG_I || cursorLoc == 4*REG_R )
+			cursorLoc += 2;
+		else if( cursorLoc == 4*REG_IM )
+			cursorLoc = 0;
+	} else if( move == Qt::Key_Left ) {
+		cursorLoc--;
+		if( cursorLoc == -1 )
+			cursorLoc = 4*REG_R+3;
+		else if( cursorLoc == 4*REG_R+1 || cursorLoc == 4*REG_I+1)
+			cursorLoc -= 2;
+	} else if( move == Qt::Key_Up ) {
+		cursorLoc -= 8;
+		if( cursorLoc < 0 ) {
+			cursorLoc += 4*REG_IM;
+			// move to lowest row
+			if( cursorLoc == 4*REG_I )
+				cursorLoc = 4*REG_I+2;
+			else if( cursorLoc < 4*REG_R )
+				cursorLoc = 4*REG_I+3;
+			else if( cursorLoc == 4*REG_R )
+				cursorLoc = 4*REG_R+2;
+			else
+				cursorLoc = 4*REG_R+3;
+		} else if( cursorLoc >= 4*REG_PC ) {
+			// move from lowest row
+			cursorLoc -= 2;
+		}
+	} else if( move == Qt::Key_Down ) {
+		cursorLoc += 8;
+		if( cursorLoc >= 4*REG_IM ) {
+			// move from lowest row
+			cursorLoc -= 4*REG_IM+2;
+		} else if( cursorLoc >= 4*REG_I ) {
+			// move to lowest row
+			if( cursorLoc == 4*REG_I )
+				cursorLoc = 4*REG_I+2;
+			else if( cursorLoc < 4*REG_R )
+				cursorLoc = 4*REG_I+3;
+			else if( cursorLoc == 4*REG_R )
+				cursorLoc = 4*REG_R+2;
+			else
+				cursorLoc = 4*REG_R+3;
+		}
+	} else if( move == Qt::Key_Escape ) {
+		// cancel changes
+		cancelModifications();
+		cursorLoc = -1;
+	} else if( move == Qt::Key_Return || move == Qt::Key_Enter ) {
+		// apply changes
+		applyModifications();
+	} else {
+		QFrame::keyPressEvent(e);
+		return;
+	}
+	e->accept();
+	update();
+}
+
+//void CPURegsViewer::mouseMoveEvent(QMouseEvent *e)
+//{
+	//QToolTip::hideText();
+	//QFrame::mouseMoveEvent(e);
+//}
+
+void CPURegsViewer::getRegister( int id, unsigned char* data )
+{
+	data[0]  = regs[id] >> 8;
+	data[1]  = regs[id] & 255;
+}
+
+void CPURegsViewer::applyModifications()
+{
+	unsigned char data[26];
+	getRegister( REG_AF, &data[0] );
+	getRegister( REG_BC, &data[2] );
+	getRegister( REG_DE, &data[4] );
+	getRegister( REG_HL, &data[6] );
+	getRegister( REG_AF2, &data[8] );
+	getRegister( REG_BC2, &data[10] );
+	getRegister( REG_DE2, &data[12] );
+	getRegister( REG_HL2, &data[14] );
+	getRegister( REG_IX, &data[16] );
+	getRegister( REG_IY, &data[18] );
+	getRegister( REG_PC, &data[20] );
+	getRegister( REG_SP, &data[22] );
+	data[24] = regs[REG_I];
+	data[25] = regs[REG_R];
+		
+	// send new data to openmsx
+	WriteDebugBlockCommand* req = new WriteDebugBlockCommand(
+			"{CPU regs}", 0, 26, data);
+	CommClient::instance().sendCommand(req);
+	// turn off editing
+	cursorLoc = -1;
+	// update copy
+	for( int i = 0; i < 14; i++ )
+		if( regsModified[i] ) {
+			regsModified[i] = false;
+			regsCopy[i] = regs[i];
+			regsChanged[i] = true;
+		}
+	// update screen
+	update();
+}
+
+void CPURegsViewer::cancelModifications()
+{
+	bool mod = false;
+	for( int i = 0; i < 14; i++ ) mod |= regsModified[i];
+	if( mod ) {
+		int ret = QMessageBox::warning(this, tr("CPU registers changes"),
+		             tr("You made changes to the CPU registers.\n"
+		                "Do you want to apply your changes or ignore them?"),
+		             QMessageBox::Apply | QMessageBox::Ignore, QMessageBox::Ignore);
+
+		if( ret == QMessageBox::Ignore ) {
+			memcpy( &regs, &regsCopy, sizeof(regs) );
+			memset( &regsModified, 0, sizeof(regsModified) );
+		} else {
+			applyModifications();
+		}
+	}
+}
+
+bool CPURegsViewer::event(QEvent *e)
+{
+	if (e->type() == QEvent::ToolTip) {
+		QHelpEvent *helpEvent = static_cast<QHelpEvent *>(e);
+		// calc register number
+		int pos = -1;
+		if( helpEvent->x() >= leftValuePos && helpEvent->x() < rightRegPos )
+			pos = 0;
+		if( helpEvent->x() >= rightValuePos)
+			pos = 1;
+		
+		if( pos >= 0 && helpEvent->y() < frameT+7*rowHeight)
+			pos += 2*((helpEvent->y() - frameT)/rowHeight);
+		
+		if( pos >= 0 && pos != 10 && pos != 11 ) {
+			// create text with binary and decimal values
+			QString text(regNames[pos]);
+			text += "\nBinary: ";
+			if( pos < 12 ) {
+				text += QString("%1 ").arg( (regs[pos] & 0xF000) >> 12, 4, 2, QChar('0') );
+				text += QString("%1 ").arg( (regs[pos] & 0x0F00) >>  8, 4, 2, QChar('0') );
+			}
+			text += " ";
+			text += QString("%1 ").arg( (regs[pos] & 0x00F0) >> 4, 4, 2, QChar('0') );
+			text += QString("%1") .arg(  regs[pos] & 0x000F       , 4, 2, QChar('0') );
+			text += "\nDecimal: ";
+			text += QString::number(regs[pos]) ;
+			// print 8 bit values
+			if( pos < 8 )
+				text += QString("\n%1: %2  %3: %4").arg(regNames[pos][0])
+				                                   .arg(regs[pos]>>8)
+				                                   .arg(regNames[pos][1])
+				                                   .arg(regs[pos]&255);
+			else if( pos < 10 )
+				text += QString("\nI%1H: %2  I%3L: %4").arg(regNames[pos][1])
+				                                       .arg(regs[pos]>>8)
+				                                       .arg(regNames[pos][1])
+				                                       .arg(regs[pos]&255);
+			QToolTip::showText(helpEvent->globalPos(), text);
+		} else
+			QToolTip::hideText();
+	}
+	return QWidget::event(e);
 }
